--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.1",
+		"drizzle-orm": "^0.44.2",
 		"next": "15.3.3",
+		"pg": "^8.16.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
@@ -21,8 +23,10 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "^20.19.1",
+		"@types/pg": "^8.15.4",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.1",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.3",
 		"tailwindcss": "^4",
